--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.password=springstudent
 # Spring Data REST properties
 spring.data.rest.base-path=/magic-api
 spring.data.rest.default-page-size=20
+
+# Spring security
+
+spring.security.user.name=scott
+spring.security.user.password=test123
